# goodschema-rs

./: Cargo.toml  README.md  cspell.json
fixtures/schema/jns42-intermediate-a/: schema.json
fixtures/schema/oas-3.1.0/: schema.json
fixtures/testing/schema/jns42-intermediate-a/: all-types.json
src/: lib.rs  main.rs
src/documents/: context.rs  factory.rs  mod.rs
src/documents/intermediate_a/: mod.rs
src/generators/: cargo_toml.rs  file.rs  lib_rs.rs  mod.rs  models_rs.rs  package.rs  types_rs.rs  validators_rs.rs
src/generators/type_model/: array_type.rs  intersection_type.rs  map_type.rs  mod.rs  object_type.rs  record_type.rs  tuple_type.rs  type_arena.rs  type_enum.rs  union_type.rs
src/generators/types_rs/: compounds.rs  helpers.rs  mod.rs  types.rs
src/models/: mod.rs
src/models/type/: array_validator.rs  map_validator.rs  mod.rs  type_arena.rs  type_enum.rs  type_key.rs  type_model.rs  validator_enum.rs
src/models/type_arena/: boolean_validator.rs  integer_validator.rs  intermediate.rs  mod.rs  type_arena.rs  type_enum.rs  type_model.rs
src/models/type_model/: array_type.rs  mod.rs  record_type.rs  type_arena.rs  type_enum.rs  type_key.rs
src/models/types/: mod.rs  number_validator.rs  string_validator.rs  type_arena.rs  type_enum.rs  type_model.rs
src/programs/: package.rs
src/schemas/: intermediate_a.rs  loader.rs  manager.rs  mod.rs
src/schemas/draft_04/: loader.rs
src/schemas/draft_07/: selectors.rs
src/schemas/draft_2020_12/: loader.rs  selectors.rs
src/schemas/intermediate_a/: meta.rs  mod.rs  types.rs
src/selectors/: intermediate_a.rs  mod.rs
src/selectors/document/: intermediate_a.rs  mod.rs
src/selectors/node/: intermediate_a.rs  mod.rs
src/utils/: load.rs  mod.rs  namer.rs  schema.rs  type_arena.rs
