[package]
name = "jns42_generator"
version = "0.0.0"
edition = "2021"
description = "Generate structs and validators from json schema"
license = "ISC"
authors = ["Elmer Bulthuis"]
homepage = "https://www.JsonSchema42.org"
keywords = ["json", "schema", "generator"]
repository = "git@github.com:JsonSchema42/jns42-generator-ts"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
case_style = "0.2.1"
clap = { version = "4.1.14", features = ["derive", "string"] }
once_cell = "1.18.0"
proc-macro2 = "1.0.66"
quote = "1.0.32"
regex = "1.9.1"
rust-format = { version = "0.3.4", features = ["proc_macro2"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
toml = "0.7.6"
url = "2.3.1"
urlencoding = "2.1.2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "jns42_generator"
path = "src/main.rs"
